# football

./: Unconfirmed 327054.crdownload:sec.endpointdlp  YFinance.py  cofl.py  pyproject.toml  testing.py  testingTableEditing.py  utils.py  working (1).json  working.json  working.py  xbrl.py
data/: 20year.parquet  Tyler_CoFL_IsItWorthIt_Proforma.xlsx  assumptions.csv  facility_rental.csv  facility_staff.csv  fredgdp.parquet  growth_rate.xlsx  proforma-awaygame-expenses.csv  proforma-game-day-expenses.csv  proforma-opex.csv  proforma-overhead.csv  proforma-revenue.csv  proforma.csv  stadium_per_game_rental.csv  startup1.csv  startup_costs.csv  startup_funding.csv  yfcomparables.parquet
img/: Rosestadium.jfif
layouts/: cofl.slides.json  working.slides.json
