[project]
name = "football"
version = "0.1.0"
description = "Continental Football League"
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
    "altair>=6.1.0",
    "edgartools>=5.30.2",
    "fastexcel>=0.20.2",
    "fredapi>=0.5.2",
    "great-tables>=0.21.0",
    "marimo[recommended]>=0.23.4",
    "matplotlib>=3.10.9",
    "mcp>=1.27.0",
    "nbconvert>=7.17.1",
    "numpy>=2.4.4",
    "numpy-financial>=1.0.0",
    "playwright>=1.59.0",
    "plotly>=6.7.0",
    "polars>=1.40.1",
    "pydantic>=2.13.3",
    "pydantic-ai>=1.90.0",
    "python-lsp-server>=1.14.0",
    "ruff>=0.15.12",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
    "yfinance>=1.3.0",
]

[dependency-groups]
dev = [
    "duckdb>=1.5.2",
    "polars[pyarrow]>=1.40.1",
    "pytest>=9.0.3",
    "python-lsp-ruff>=2.3.1",
    "python-lsp-server>=1.14.0",
    "sqlglot>=30.6.0",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.9.0.post1",
    "websockets>=16.0",
]
